--- a/pages/blog.html
+++ b/pages/blog.html
@@ -82,6 +82,103 @@
         </h1>
     </div>
 
+    <!-- Our Blog -->
+    <div class="testimonials">
+        <div class="container  col-xxl-8 py-5 justify-content-center">
+            <div class="col-lg-6 text-lg-start text-start order-lg-1 order-sm-1">
+                <h5 class="content text-uppercase pb-3">Our Blog</h5>
+                <h3 class="content lh-1 mb-3 pb-3">We share the latest developments in the digital
+                    world and the innovations of our company</h3>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
+                        <img src="../assets/img/blog1.jpg" class="card-img-top">
+                        <div class="card-body page-content flex-grow-1">
+                            <h5 class="card-title">Artbees’ Experience of WordCamp Milano: The Culture of Giving in
+                                WordPress</h5>
+                            <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
+                        <img src="../assets/img/blog2.jpg" class="card-img-top">
+                        <div class="card-body page-content flex-grow-1">
+                            <h5 class="card-title">What is a WordCamp and What Was Artbees’ Takeaways From WordCamp
+                                Thessaloniki 2018</h5>
+                            <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
+                        <img src="../assets/img/blog3.jpg" class="card-img-top">
+                        <div class="card-body page-content flex-grow-1">
+                            <h5 class="card-title">Show Your Audience What’s on the Horizon: FREE Coming Soon PSD
+                                Webpage
+                                Template</h5>
+                            <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
+                        <img src="../assets/img/blog4.jpg" class="card-img-top">
+                        <div class="card-body page-content flex-grow-1">
+                            <h5 class="card-title">Why Data Is Imperative When Developing WordPress Themes & Plugins
+                            </h5>
+                            <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
+                        <img src="../assets/img/blog5.jpg" class="card-img-top">
+                        <div class="card-body page-content flex-grow-1">
+                            <h5 class="card-title">Artbees is Showcasing at Web Summit 2018 and big news is around the
+                                corner!</h5>
+                            <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
+                        <img src="../assets/img/blog6.jpg" class="card-img-top">
+                        <div class="card-body page-content flex-grow-1">
+                            <h5 class="card-title">Glimpse of the future: Q&A with Artbees Themes CTO about Jupiter X
+                                Beta Release</h5>
+                            <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Final Hero -->
+    <div class="container-f" style="background-image: url('../assets/img/services.png');">
+        <div class="container col-xxl-8 px-4 py-5" style="z-index: 1;">
+            <div class="row flex-lg-row align-items-center g-5 py-5">
+                <div class="col-lg-6 text-center order-lg-2 order-sm-2"> <!-- A imagem é centralizada sempre -->
+                    <i class="bi bi-play-circle-fill" style="font-size: 5rem; color: white;"></i>
+                </div>
+                <div class="col-lg-6 text-lg-start text-start order-lg-1 order-sm-1 text-white">
+                    <!-- Adicionamos classes condicionais para o texto -->
+                    <h2 class="content fw-bold lh-1 mb-3 pb-3">We are Expanding Your Sales and
+                        Sectoral Brand Value. Work with us, get rid of ordinary methods.</h2>
+                    <a href="#" style="text-decoration: none; color: var(--grey);">
+                        <h4 class="content">Work With Us</h4>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- FOOTER -->
     <div class="container">
         <footer class="text-center text-lg-start text-muted">
