'our blog cards' have been adjusted

--- a/index.html
+++ b/index.html
@@ -389,8 +389,9 @@
 
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
-                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
-                        <img src="./assets/img/blog3.jpg" class="card-img-top">
+                    <div class="card d-flex flex-column rounded-0" style="padding: 0; height: 100%;">
+                        <img src="../assets/img/blog1.jpg" class="card-img-top rounded-0"
+                            style="padding: 0; height: 159px; object-fit: cover;">
                         <div class="card-body page-content flex-grow-1">
                             <h5 class="card-title">Artbees’ Experience of WordCamp Milano: The Culture of Giving in
                                 WordPress</h5>
@@ -399,8 +400,9 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
-                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
-                        <img src="./assets/img/blog3.jpg" class="card-img-top">
+                    <div class="card d-flex flex-column rounded-0" style="padding: 0; height: 100%;">
+                        <img src="../assets/img/blog2.jpg" class="card-img-top rounded-0"
+                            style="padding: 0; height: 159px; object-fit: cover;">
                         <div class="card-body page-content flex-grow-1">
                             <h5 class="card-title">What is a WordCamp and What Was Artbees’ Takeaways From WordCamp
                                 Thessaloniki 2018</h5>
@@ -409,8 +411,9 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
-                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
-                        <img src="./assets/img/blog3.jpg" class="card-img-top">
+                    <div class="card d-flex flex-column rounded-0" style="padding: 0; height: 100%;">
+                        <img src="../assets/img/blog3.jpg" class="card-img-top rounded-0"
+                            style="padding: 0; height: 159px; object-fit: cover;">
                         <div class="card-body page-content flex-grow-1">
                             <h5 class="card-title">Show Your Audience What’s on the Horizon: FREE Coming Soon PSD
                                 Webpage
