--- a/pages/blog.html
+++ b/pages/blog.html
@@ -93,18 +93,17 @@
 
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
-                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
-                        <img src="../assets/img/blog1.jpg" class="card-img-top">
+                    <div class="card d-flex flex-column rounded-0" style="padding: 0; height: 100%;">
+                        <img src="../assets/img/blog1.jpg" class="card-img-top rounded-0" style="padding: 0; height: 159px; object-fit: cover;">
                         <div class="card-body page-content flex-grow-1">
-                            <h5 class="card-title">Artbees’ Experience of WordCamp Milano: The Culture of Giving in
-                                WordPress</h5>
+                            <h5 class="card-title">Artbees’ Experience of WordCamp Milano: The Culture of Giving in WordPress</h5>
                             <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
-                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
-                        <img src="../assets/img/blog2.jpg" class="card-img-top">
+                    <div class="card d-flex flex-column rounded-0" style="padding: 0; height: 100%;">
+                        <img src="../assets/img/blog2.jpg" class="card-img-top rounded-0" style="padding: 0; height: 159px; object-fit: cover;">
                         <div class="card-body page-content flex-grow-1">
                             <h5 class="card-title">What is a WordCamp and What Was Artbees’ Takeaways From WordCamp
                                 Thessaloniki 2018</h5>
@@ -113,8 +112,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
-                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
-                        <img src="../assets/img/blog3.jpg" class="card-img-top">
+                    <div class="card d-flex flex-column rounded-0" style="padding: 0; height: 100%;">
+                        <img src="../assets/img/blog3.jpg" class="card-img-top rounded-0" style="padding: 0; height: 159px; object-fit: cover;">
                         <div class="card-body page-content flex-grow-1">
                             <h5 class="card-title">Show Your Audience What’s on the Horizon: FREE Coming Soon PSD
                                 Webpage
@@ -126,8 +125,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
-                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
-                        <img src="../assets/img/blog4.jpg" class="card-img-top">
+                    <div class="card d-flex flex-column rounded-0" style="padding: 0; height: 100%;">
+                        <img src="../assets/img/blog4.jpg" class="card-img-top rounded-0" style="padding: 0; height: 159px; object-fit: cover;">
                         <div class="card-body page-content flex-grow-1">
                             <h5 class="card-title">Why Data Is Imperative When Developing WordPress Themes & Plugins
                             </h5>
@@ -136,8 +135,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
-                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
-                        <img src="../assets/img/blog5.jpg" class="card-img-top">
+                    <div class="card d-flex flex-column rounded-0" style="padding: 0; height: 100%;">
+                        <img src="../assets/img/blog5.jpg" class="card-img-top rounded-0" style="padding: 0; height: 159px; object-fit: cover;">
                         <div class="card-body page-content flex-grow-1">
                             <h5 class="card-title">Artbees is Showcasing at Web Summit 2018 and big news is around the
                                 corner!</h5>
@@ -146,8 +145,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
-                    <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
-                        <img src="../assets/img/blog6.jpg" class="card-img-top">
+                    <div class="card d-flex flex-column rounded-0" style="padding: 0; height: 100%;">
+                        <img src="../assets/img/blog6.jpg" class="card-img-top rounded-0" style="padding: 0; height: 159px; object-fit: cover;">
                         <div class="card-body page-content flex-grow-1">
                             <h5 class="card-title">Glimpse of the future: Q&A with Artbees Themes CTO about Jupiter X
                                 Beta Release</h5>
