--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -125,6 +125,52 @@
         </div>
     </div>
 
+    <div class="container col-xxl-8 py-5">
+        <div class="row row-cols-1 row-cols-md-4 row-cols-lg-4 g-4">
+            <div class="col mb-4">
+                <div class="card bg-transparent border-0">
+                    <img src="../assets/img/member-1.png" class="card-img-top rounded-0 img-fluid" alt="Addie Moran">
+                    <div class="card-body page-content flex-grow-1 p-0">
+                        <h5 class="card-title pt-3">Addie Moran</h5>
+                        <p class="card-text"><small class="text-body-secondary">Product Manager</small></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col mb-4">
+                <div class="card bg-transparent border-0">
+                    <img src="../assets/img/member-2.png" class="card-img-top rounded-0 img-fluid" alt="Bobby Owen">
+                    <div class="card-body page-content flex-grow-1 p-0">
+                        <h5 class="card-title pt-3">Bobby Owen</h5>
+                        <p class="card-text"><small class="text-body-secondary">Creative Director</small></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col mb-4">
+                <div class="card bg-transparent border-0">
+                    <img src="../assets/img/member-3.png" class="card-img-top rounded-0 img-fluid" alt="Justin McGuire">
+                    <div class="card-body page-content flex-grow-1 p-0">
+                        <h5 class="card-title pt-3">Justin McGuire</h5>
+                        <p class="card-text"><small class="text-body-secondary">Art Director</small></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col mb-4">
+                <div class="card bg-transparent border-0">
+                    <img src="../assets/img/member-4.png" class="card-img-top rounded-0 img-fluid" alt="Todd McKinney">
+                    <div class="card-body page-content flex-grow-1 p-0">
+                        <h5 class="card-title pt-3">Todd McKinney</h5>
+                        <p class="card-text"><small class="text-body-secondary">Software Developer</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- Our Customers -->
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row align-items-center g-5 py-5">
