--- a/pages/services.html
+++ b/pages/services.html
@@ -221,6 +221,131 @@
     </div>
 
 
+    <div class="container-fluid pt-5 pb-5">
+        <div class="container">
+            <div class="row">
+                <!-- Coluna 1 -->
+                <div class="col-md-4 d-flex">
+                    <div class="row mb-4">
+                        <!-- Card 1 -->
+                        <div class="col mb-4">
+                            <div class="card bg-transparent border-0">
+                                <div class="card-body d-flex align-items-start">
+                                    <img src="../assets/svg/lead-generation-blue.svg" class="me-3"
+                                        style="width: 73px; height: 73px;">
+                                    <div>
+                                        <h5 class="card-title ">Lead Generation</h5>
+                                        <p class="card-text ">Lorem ipsum dolor sit amet, consectetur
+                                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 2 -->
+                        <div class="col mb-4">
+                            <div class="card bg-transparent border-0">
+                                <div class="card-body d-flex align-items-start">
+                                    <img src="../assets/svg/lead-generation-blue.svg" class="me-3"
+                                        style="width: 73px; height: 73px;">
+                                    <div>
+                                        <h5 class="card-title ">Innovative Approaches</h5>
+                                        <p class="card-text ">Lorem ipsum dolor sit amet, consectetur
+                                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 3 -->
+                        <div class="col mb-4">
+                            <div class="card bg-transparent border-0">
+                                <div class="card-body d-flex align-items-start">
+                                    <img src="../assets/svg/data-security-blue.svg" class="me-3"
+                                        style="width: 73px; height: 73px;">
+                                    <div>
+                                        <h5 class="card-title ">Data Security Consultancy</h5>
+                                        <p class="card-text ">Lorem ipsum dolor sit amet, consectetur
+                                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Coluna 2 (Central) -->
+                <div class="col-md-4">
+                    <div class="row">
+                        <!-- Card Único na Coluna Central -->
+                        <div class="col">
+                            <div class="card bg-transparent border-0">
+                                <div class="card-body">
+                                    <img src="../assets/img/phone.png" class="img-fluid shadow-lg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Coluna 3 -->
+                <div class="col-md-4 d-flex">
+                    <div class="row mb-4">
+                        <!-- Card 1 -->
+                        <div class="col mb-4">
+                            <div class="card bg-transparent border-0">
+                                <div class="card-body d-flex align-items-start">
+                                    <img src="../assets/svg/target-audience-blue.svg" class="me-3"
+                                        style="width: 73px; height: 73px;">
+                                    <div>
+                                        <h5 class="card-title ">Target Audience Analysis</h5>
+                                        <p class="card-text ">Lorem ipsum dolor sit amet, consectetur
+                                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 2 -->
+                        <div class="col mb-4">
+                            <div class="card bg-transparent border-0">
+                                <div class="card-body d-flex align-items-start">
+                                    <img src="../assets/svg/2-blue.svg" class="me-3"
+                                        style="width: 73px; height: 73px;">
+                                    <div>
+                                        <h5 class="card-title ">Online Consulting Service</h5>
+                                        <p class="card-text ">Lorem ipsum dolor sit amet, consectetur
+                                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 3 -->
+                        <div class="col mb-4">
+                            <div class="card bg-transparent border-0">
+                                <div class="card-body d-flex align-items-start">
+                                    <img src="../assets/svg/6-blue.svg" class="me-3"
+                                        style="width: 73px; height: 73px;">
+                                    <div>
+                                        <h5 class="card-title ">Sectoral Analysis</h5>
+                                        <p class="card-text ">Lorem ipsum dolor sit amet, consectetur
+                                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- Testimonials -->
     <div class="testimonials">
         <div class="container  col-xxl-8 py-5 justify-content-center">
