--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-xxl bg-light shadow-lg">
-        <div class="container-fluid">
-            <!-- <a class="navbar-brand" href="./index.html">Agency</a> -->
+    <nav class="navbar navbar-expand-xxl bg-light shadow-lg ">
+        <div class="container-fluid col-xxl-8">
             <a class="navbar-brand" href="./index.html"><img src="../assets/img/logo2.png" class="img-fluid"
                     alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbar">
-                <ul class="navbar-nav align-items-end justify-content-lg-end ">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav ms-auto align-items-end">
+                    <li class="nav-item"><a class="nav-link active text-primary" aria-current="page" href="#">Home</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="./pages/about-us.html">About Us</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="./pages/services.html"
@@ -67,17 +67,16 @@
                     <li class="nav-item"><a class="nav-link" href="./pages/contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
-
-
-            <div class="d-lg-flex justify-content-lg-end ">
+            <div class="d-flex">
                 <button class="btn btn-primary classic_btn">Buy JupiterX</button>
             </div>
         </div>
     </nav>
 
+
     <!-- HERO -->
     <div class="container-f" style="background-image: url('../assets/img/home-head.jpg');">
-        <h1 class="display-1 text-white font-weight-light text-center">
+        <h1 class="display-1 text-white font-weight-light text-center col-xxl-6">
             We are at your side with our <br>
             Strategic Planning and Management
         </h1>
@@ -87,8 +86,8 @@
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row align-items-center g-5 py-5">
             <div class="col-lg-6 text-center order-lg-2 order-sm-2"> <!-- A imagem é centralizada sempre -->
-                <img src="./assets/img/about.png" class="d-block mx-auto img-fluid" alt="Bootstrap Themes"
-                    style="width: 75%;" loading="lazy">
+                <img src="./assets/img/about.png" class="img-fluid" alt="Bootstrap Themes" style="width: 75%;"
+                    loading="lazy">
             </div>
             <div class="col-lg-6 text-lg-start text-start order-lg-1 order-sm-1">
                 <!-- Adicionamos classes condicionais para o texto -->
