--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -33,8 +33,8 @@
 
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-xxl bg-light shadow-lg">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-xxl bg-light shadow-lg ">
+        <div class="container-fluid col-xxl-8">
             <!-- <a class="navbar-brand" href="./index.html">Agency</a> -->
             <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo2.png" class="img-fluid"
                     alt="Logo"></a>
@@ -42,10 +42,11 @@
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbar">
-                <ul class="navbar-nav align-items-end justify-content-lg-end ">
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav ms-auto align-items-end">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="./about-us.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link active text-primary" href="./about-us.html">About Us</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="services.html"
                             onclick="redirectToPage('services.html')" id="navbarDropdown" role="button"
@@ -66,17 +67,15 @@
                     <li class="nav-item"><a class="nav-link" href="./contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
-
-
-            <div class="d-lg-flex justify-content-lg-end">
-                <button class="btn btn-primary">Buy JupiterX</button>
+            <div class="d-flex">
+                <button class="btn btn-primary classic_btn">Buy JupiterX</button>
             </div>
         </div>
     </nav>
 
     <!-- HERO -->
     <div class="container-f pages" style="background-image: url('../assets/img/about_us.png');">
-        <h1 class="display-1 text-white font-weight-light text-center">
+        <h1 class="display-1 text-white font-weight-light text-center col-xxl-6">
             About Us
         </h1>
     </div>
