--- a/pages/portfolios.html
+++ b/pages/portfolios.html
@@ -33,8 +33,8 @@
 
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-xxl bg-light shadow-lg">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-xxl bg-light shadow-lg ">
+        <div class="container-fluid col-xxl-8">
             <!-- <a class="navbar-brand" href="./index.html">Agency</a> -->
             <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo2.png" class="img-fluid"
                     alt="Logo"></a>
@@ -42,11 +42,11 @@
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbar">
-                <ul class="navbar-nav align-items-end justify-content-lg-end ">
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav ms-auto align-items-end">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link " href="./about-us.html">About Us</a></li>
-                    <li class="nav-item dropdown active">
+                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="services.html"
                             onclick="redirectToPage('services.html')" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -61,7 +61,7 @@
                             <a class="dropdown-item" href="#">Ad Purchasing Management</a>
                         </div>
                     </li>
-                    <li class="nav-item"><a class="nav-link active" href="./portfolios.html">Portfolios</a></li>
+                    <li class="nav-item"><a class="nav-link active text-primary" href="./portfolios.html">Portfolios</a></li>
                     <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contact-us.html">Contact Us</a></li>
                 </ul>
@@ -69,14 +69,14 @@
 
 
             <div class="d-lg-flex justify-content-lg-end">
-                <button class="btn btn-primary">Buy JupiterX</button>
+                <button class="btn btn-primary classic_btn">Buy JupiterX</button>
             </div>
         </div>
     </nav>
 
     <!-- HERO -->
     <div class="container-f pages" style="background-image: url('../assets/img/portifolios.png');">
-        <h1 class="display-1 text-white font-weight-light text-center">
+        <h1 class="display-1 text-white font-weight-light text-center col-xxl-6">
             Our Portfolio
         </h1>
     </div>
@@ -102,17 +102,253 @@
                 <div class="col d-flex flex-column align-items-center text-center">
                     <h6 class="content">We have Certificates of Marketing Partners in Google, Facebook, Shopify</h6>
 
-                    <button type="button" class="btn btn- w-50 mb-3 mx-auto mt-3">
+                    <button type="button" class="btn btn-primary w-50 mb-3 mx-auto mt-3">
                         <i class="bi bi-google fs-4"></i> Google Ads
                     </button>
 
-                    <button type="button" class="btn btn-scondary w-50 mx-auto">
+                    <button type="button" class="btn btn-primary w-50 mx-auto">
                         <i class="bi bi-facebook fs-4"></i> Facebook
                     </button>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Our Work -->
+    <div class="container col-xxl-8 px-4 py-5">
+        <h3 class="content text-xl-start text-md-center fw-bold mb-5">Our Work</h3>
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="nav nav-tabs border-0 justify-content-md-end justify-content-md-center" id="myTabs" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active border-0 text-center" id="work1-tab" data-bs-toggle="tab"
+                            href="#work1" role="tab" aria-controls="work1" aria-selected="true">
+                            All
+                        </a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link text-center" id="work2-tab" data-bs-toggle="tab" href="#work2" role="tab"
+                            aria-controls="work2" aria-selected="false">
+                            Mobile App
+                        </a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link text-center" id="work3-tab" data-bs-toggle="tab" href="#work3" role="tab"
+                            aria-controls="work3" aria-selected="false">
+                            Social Media
+                        </a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link text-center" id="work4-tab" data-bs-toggle="tab" href="#work4" role="tab"
+                            aria-controls="work4" aria-selected="false">
+                            UI/UX Design
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="tab-content mt-4" id="myTabsContent">
+                    <!-- Tab - All  -->
+                    <div class="tab-pane fade show active" id="work1" role="tabpanel" aria-labelledby="work1-tab">
+                        <!-- Card -->
+                        <div class="row g-0 mb-5">
+                            <div class="col-12 col-md-6">
+                                <img src="../assets/img/port-1-1024x576.jpg" class="img-fluid" alt="Portfolio Image">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="card-body mx-4">
+                                    <h3 class="card-title">JupiterX Movers</h3>
+                                    <div class="card-meta">
+                                        <p>Mobile App</p>
+                                    </div>
+                                    <p>JupiterX Movers Customer JupiterX Movers Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row g-0 mb-5">
+                            <div class="col-12 col-md-6">
+                                <img src="../assets/img/port-2-1024x576.jpg" class="img-fluid" alt="Portfolio Image">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="card-body mx-4">
+                                    <h3 class="card-title">
+                                        JupiterX Spa & Massage Center</h3>
+                                    <div class="card-meta">
+                                        <p>Social Media</p>
+                                    </div>
+                                    <p>JupiterX Movers Customer JupiterX Movers Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row g-0 mb-5">
+                            <div class="col-12 col-md-6">
+                                <img src="../assets/img/port-3-1024x576.jpg" class="img-fluid" alt="Portfolio Image">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="card-body mx-4">
+                                    <h3 class="card-title">JupiterX Construction & Engineering</h3>
+                                    <div class="card-meta">
+                                        <p>Mobile App, UI/UX Design</p>
+                                    </div>
+                                    <p>JupiterX Movers Customer JupiterX Movers Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row g-0 mb-5">
+                            <div class="col-12 col-md-6">
+                                <img src="../assets/img/port-7-1024x576.jpg" class="img-fluid" alt="Portfolio Image">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="card-body mx-4">
+                                    <h3 class="card-title">
+                                        JupiterX Cosmetic Shop</h3>
+                                    <div class="card-meta">
+                                        <p>Mobile App, UI/UX Design</p>
+                                    </div>
+                                    <p>JupiterX Movers Customer JupiterX Movers Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row g-0 mb-5">
+                            <div class="col-12 col-md-6">
+                                <img src="../assets/img/port8-1024x576.jpg" class="img-fluid" alt="Portfolio Image">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="card-body mx-4">
+                                    <h3 class="card-title">
+                                        JupiterX Real Estate Company</h3>
+                                    <div class="card-meta">
+                                        <p>Mobile App, UI/UX Design</p>
+                                    </div>
+                                    <p>JupiterX Movers Customer JupiterX Movers Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row g-0 mb-5">
+                            <div class="col-12 col-md-6">
+                                <img src="../assets/img/port-4-1024x576.jpg" class="img-fluid" alt="Portfolio Image">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="card-body mx-4">
+                                    <h3 class="card-title">
+                                        JupiterX Construction</h3>
+                                    <div class="card-meta">
+                                        <p>Mobile App, UI/UX Design</p>
+                                    </div>
+                                    <p>JupiterX Movers Customer JupiterX Movers Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Tab - Mobile App -->
+                    <div class="tab-pane fade" id="work2" role="tabpanel" aria-labelledby="work2-tab">
+                        <!-- Card -->
+                        <div class="row g-0 mb-5">
+                            <div class="col-12 col-md-6">
+                                <img src="../assets/img/port-1-1024x576.jpg" class="img-fluid" alt="Portfolio Image">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="card-body mx-4">
+                                    <h3 class="card-title">JupiterX Movers</h3>
+                                    <div class="card-meta">
+                                        <p>Mobile App</p>
+                                    </div>
+                                    <p>JupiterX Movers Customer JupiterX Movers Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Tab - Social Media -->
+                    <div class="tab-pane fade" id="work3" role="tabpanel" aria-labelledby="work3-tab">
+                        <!-- Card -->
+                        <div class="row g-0 mb-5">
+                            <div class="col-12 col-md-6">
+                                <img src="../assets/img/port-2-1024x576.jpg" class="img-fluid" alt="Portfolio Image">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="card-body mx-4">
+                                    <h3 class="card-title">
+                                        JupiterX Spa & Massage Center</h3>
+                                    <div class="card-meta">
+                                        <p>Social Media</p>
+                                    </div>
+                                    <p>JupiterX Movers Customer JupiterX Movers Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Tab - Social Media -->
+                    <div class="tab-pane fade" id="work4" role="tabpanel" aria-labelledby="work4-tab">
+                        <!-- Card -->
+
+                        <div class="row g-0 mb-5">
+                            <div class="col-12 col-md-6">
+                                <img src="../assets/img/port-4-1024x576.jpg" class="img-fluid" alt="Portfolio Image">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="card-body mx-4">
+                                    <h3 class="card-title">
+                                        JupiterX Construction</h3>
+                                    <div class="card-meta">
+                                        <p>Mobile App, UI/UX Design</p>
+                                    </div>
+                                    <p>JupiterX Movers Customer JupiterX Movers Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+
 
     <!-- Our Customers -->
     <div class="container col-xxl-8 px-4 py-5">
@@ -146,11 +382,11 @@
             <div class="col d-flex flex-column align-items-start gap-2">
                 <h6 class="content">We have Certificates of Marketing Partners in Google, Facebook, Shopify</h6>
 
-                <button type="button" class="btn btn- w-50 mb-3 mx-auto mt-3">
+                <button type="button" class="btn btn-primary  w-50 mb-3 mx-auto mt-3">
                     <i class="bi bi-google fs-4"></i> Google Ads
                 </button>
 
-                <button type="button" class="btn btn-scondary w-50 mx-auto">
+                <button type="button" class="btn btn-primary  w-50 mx-auto">
                     <i class="bi bi-facebook fs-4"></i> Facebook
                 </button>
             </div>
