--- a/pages/services.html
+++ b/pages/services.html
@@ -33,8 +33,8 @@
 
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-xxl bg-light shadow-lg">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-xxl bg-light shadow-lg ">
+        <div class="container-fluid col-xxl-8">
             <!-- <a class="navbar-brand" href="./index.html">Agency</a> -->
             <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo2.png" class="img-fluid"
                     alt="Logo"></a>
@@ -42,8 +42,8 @@
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbar">
-                <ul class="navbar-nav align-items-end justify-content-lg-end ">
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav ms-auto align-items-end">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link " href="./about-us.html">About Us</a></li>
                     <li class="nav-item dropdown active">
@@ -69,14 +69,14 @@
 
 
             <div class="d-lg-flex justify-content-lg-end">
-                <button class="btn btn-primary">Buy JupiterX</button>
+                <button class="btn btn-primary classic_btn">Buy JupiterX</button>
             </div>
         </div>
     </nav>
 
     <!-- HERO -->
     <div class="container-f pages" style="background-image: url('../assets/img/services.png');">
-        <h1 class="display-1 text-white font-weight-light text-center">
+        <h1 class="display-1 text-white font-weight-light text-center col-xxl-6">
             Services
         </h1>
     </div>
@@ -97,7 +97,7 @@
                         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <h2 class="content lh-1 mb-3 pb-3">Work With Us</h2>
+                    <h6 class="content lh-1 mb-3 pb-3">Work With Us</h6>
                 </div>
             </div>
         </div>
