--- a/pages/portfolios.html
+++ b/pages/portfolios.html
@@ -119,7 +119,7 @@
         <h3 class="content text-xl-start text-md-center fw-bold mb-5">Our Work</h3>
         <div class="row">
             <div class="col-md-12">
-                <ul class="nav nav-tabs border-0 justify-content-md-end justify-content-md-center" id="myTabs" role="tablist">
+                <ul class="nav nav-tabs border-0 justify-content-xl-end justify-content-md-center" id="myTabs" role="tablist">
                     <li class="nav-item" role="presentation">
                         <a class="nav-link active border-0 text-center" id="work1-tab" data-bs-toggle="tab"
                             href="#work1" role="tab" aria-controls="work1" aria-selected="true">
@@ -325,30 +325,7 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </div>
-
-
-
 
     <!-- Our Customers -->
     <div class="container col-xxl-8 px-4 py-5">
